# PacmanFPGA

./: .gitignore  CMakeLists.txt  Pacman.tcl  README.md  main_square.cpp  min_area_pfile.tmp
rtl/: audio.sv  common_defines.svh  cookie_candy.sv  decimal_to_bcd.sv  display_window_mapper.sv  drawing_logic.sv  dual_port_bram.sv  dual_port_bram_with_rst.sv  enemy_movement.sv  enemy_sprite.sv  map_sprite.sv  open_mouth_8.coe  orange_monster_move.sv  orange_monster_sprite.coe  pacman_game.sv  pacman_movement.sv  pacman_sprite.sv  params.sv  pink_monster_mov.sv  pink_monster_sprite.coe  power_cookies.mem  pwm.sv  red_monster_mov.sv  simple_480p.sv  sprite_map.sv  strobe_gen.sv  text.sv  top.sv  top_square.sv  vga_signal_gen.sv
rtl/constraints/: nexys-a7-100t.xdc
rtl/ip/: blue_sprite.xcix  clk_wiz_0.xci  clk_wiz_0.xcix  dual_port_bram.sv  font.sv  pacman_sprite.xcix  pink_sprite.xcix  precise_div.sv  rams_dist.sv  rams_dist_to_bram.sv  red_sprite.xcix  reset_generator.sv  single_port_bram_with_rst.sv  sprite_pacman_open.xcix
rtl/mem/: Chomp.mem  Death.mem  Intro.mem  blue_monster_16.mem  blue_monster_sprite.coe  blue_monster_sprite.mem  closed_mouth_8.coe  closed_mouth_8.mem  closed_mouth_pacman_16.mem  ghost_mode.mem  ghost_mode_16.mem  map.mem  open_mouth_8.mem  open_mouth_pacman_16.mem  orange_monster.mem  orange_monster_16.mem  pacman_sprite.coe  pacman_sprite.mem  pink_monster_16.mem  pink_monster_sprite.mem  red_monster_16.mem  red_monster_sprite.coe  red_monster_sprite.mem
scripts/: convert_wav_to_mem.py  ttf_to_sv.py
src/: top.cpp
vivado_project/: Pacman.xpr
